k8s/devtools/redis-commander/redis-commander-staging.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: devtools

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-commander-staging
  namespace: devtools
  labels:
    app: redis-commander-staging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-commander-staging
  template:
    metadata:
      labels:
        app: redis-commander-staging
    spec:
      containers:
      - image: rediscommander/redis-commander
        name: redis-commander-staging
        ports:
        - containerPort: 8081
        imagePullPolicy: Always

---

apiVersion: v1
kind: Service
metadata:
  name: redis-commander-staging-service
  namespace: devtools
spec:
  selector:
    app: redis-commander-staging
  ports:
    - name: http
      port: 8081
      targetPort: 8081
  type: ClusterIP

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: redis-commander-staging-ingress
  namespace: devtools
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - redis-stg.devtools.sorteamos.online
    secretName: redis-commander-staging-certs
  rules:
  - host: "redis-stg.devtools.sorteamos.online"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: redis-commander-staging-service
            port:
              number: 8081
